--- a/Pipfile
+++ b/Pipfile
@@ -24,8 +24,8 @@ six = "==1.12.0"
 sqlparse = "==0.3.0"
 wrapt = "==1.11.2"
 Django = "==2.2.6"
-Pillow = "==6.2.0"
 wheel = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.8.1"
