--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ autopep8 = "==1.4.4"
 colorama = "==0.4.1"
 django-cors-headers = "==3.1.1"
 django-safedelete = "==0.5.2"
-djangorestframework = "==3.10.3"
+djangorestframework = ">=3.11.2"
 gunicorn = "==20.0.0"
 isort = "==4.3.21"
 lazy-object-proxy = "==1.4.2"
@@ -23,6 +23,6 @@ pytz = "==2019.2"
 six = "==1.12.0"
 sqlparse = "==0.3.0"
 wrapt = "==1.11.2"
-Django = "==2.2.6"
+Django = ">=2.2.24"
 wheel = "*"
 pillow = "*"
