--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ wrapt = "==1.11.2"
 Django = "==2.2.6"
 Pillow = "==6.2.0"
 wheel = "*"
+pylint-django = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "*"
